@@ -1,3 +1,12 @@
+2004-07-22  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el: Doc fix.  Improve the DSC compliance of the generated
+	PostScript.  Suggested by Michael Piotrowski <mxp@dynalabs.de>.
+	(ps-print-version): New version 6.6.5.
+	(ps-printing-region): Doc fix.
+	(ps-generate-string-list): Comment fix.
+	(ps-message-log-max, ps-begin-file): Code fix.
+
 2004-07-22  Kim F. Storm  <storm@cua.dk>
 
 	* progmodes/make-mode.el: Fix comments.
